# ChatterServeCpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  autobuild.sh  deploy.sh  message.txt  problem.txt
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.hpp  usermodel.hpp
include/server/model/: friendmodel.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/: Makefile
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  Makefile  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp  friendmodel.cpp  usermodel.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/: test  test_mysql.cpp
test/test_muduo/: test.cpp
